	* documentation updates (mostly text books of Baltagi and Wooldridge to latest edition,
	  references are also more specific now)
	  
	* pbgtest: fixed/enabled type="F" (F test of lmtest::bgtest) in wrapper pbgtest() and
	  fixed/enabled passing of argument order.by= [additional argument in
	  lmtest::bgtest] [tests/testpbgtest.R added, docs updated and extended]
	
	* phtest( , method="aux") [Hausman regression-based test]: fixed bug when data= contains more cases than
	  there are used in model estimation (due to NA values); avoid calc. of RE model a second time;
	  phtest now also works with between model correctly (fixed degrees of freedom)
	  tests/test_phtest_Hausman_regression.R added
	  
	* plm(): original row names of inputted data are preserved in plm_object$model,
	  so functions like pmodel.response(), model.frame(), model.matrix(), residuals()
	  return the original row.names (and thus fancy rownames if those were to be computed by pdata.frame);
	  as.data.frame.pdata.frame(): respects row.names argument

Changes since version 1.5-11

	* added RiceFarms to datasets to eliminate non-CRAN dependencies, (temporarily) removed 'pder' from suggested, uncommented (fixed) example in pdwtest.Rd

Changes since version 1.5-12

	* dataset Produc: added variable 'region' as 3rd column and description: 'pcap' is public capital (not private) while 'pc' is private capital (not public)
	* added importFrom as per CRAN check for submission.

Changes since version 1.5-13

    * fixed bug in vcovHC(... method="white") from degenerating diag() if any groups have only 1 element
	* reintroduced "white2" method.

Changes since version 1.5-14

	* mylm: added commented (i.e. inactive) warning about dropped coefficients in estimation
	* fitted.plm: added commented (i.e. inactive) warning in about dropped coefficients in estimated model compared to specified model.matrix
	* added testfile tests/test_fitted.plm.R (some of those test currently do not run (commented, i.e. inactive))