@@ -527,7 +527,7 @@ Changes since version 1.5-12
 
 Changes since version 1.5-13
 
-    * fixed bug in vcovHC(... method="white") from degenerating diag() if any groups have only 1 element
+  * fixed bug in vcovHC(... method="white") from degenerating diag() if any groups have only 1 element
 	* reintroduced "white2" method.
 
 Changes since version 1.5-14
@@ -535,3 +535,12 @@ Changes since version 1.5-14
 	* mylm: added commented (i.e. inactive) warning about dropped coefficients in estimation
 	* fitted.plm: added commented (i.e. inactive) warning in about dropped coefficients in estimated model compared to specified model.matrix
 	* added testfile tests/test_fitted.plm.R (some of those test currently do not run (commented, i.e. inactive))
+	* pmodel.response.pFormula: make sure supplied formula is a pFormula before we continue (coerce to pFormula)
+	   fixes bugs like:
+	   pmodel.response.pFormula(regular_formula, data = dat, model = "pooling")
+	    # Error in names(y) <- namesy :
+	    # 'names' attribute [482] must be the same length as the vector [0]
+	   still some bugs left in pmodel.response -> see added testfile: tests/test_model.matrix_pmodel.response.R
+	* some testfiles: fixed wired encodings
+	
+	
